--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "adminlte",
-  "version": "0.1.0",
+  "name": "sicotyc",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "prepare": "husky install",
