--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-browser": "15.0.1",
     "@angular/platform-browser-dynamic": "15.0.1",
     "@angular/router": "15.0.1",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@ngrx/store": "14.3.0",
     "@profabric/angular-components": "0.1.2",
     "bootstrap": "4.6.1",
