--- a/angular.json
+++ b/angular.json
@@ -22,10 +22,7 @@
                         "main": "src/main.ts",
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "tsconfig.app.json",
-                        "assets": [
-                            "src/favicon.ico",
-                            "src/assets"
-                        ],
+                        "assets": ["src/favicon.ico", "src/assets"],
                         "styles": [
                             "src/styles.scss",
                             "node_modules/ngx-toastr/toastr.css"
@@ -41,7 +38,8 @@
                             "gatekeeper-client-sdk",
                             "path",
                             "os",
-                            "fs"
+                            "fs",
+                            "sweetalert2"
                         ]
                     },
                     "configurations": {
@@ -98,24 +96,21 @@
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "tsconfig.spec.json",
                         "karmaConfig": "karma.conf.js",
-                        "assets": [
-                            "src/favicon.ico",
-                            "src/assets"
-                        ],
+                        "assets": ["src/favicon.ico", "src/assets"],
                         "styles": [
                             "src/styles.scss",
-                            "node_modules/ngx-toastr/toastr.css"
+                            "node_modules/ngx-toastr/toastr.css",
+                            "node_modules/admin-lte/plugins/sweetalert2/sweetalert2.all.min.css"
                         ],
-                        "scripts": []
+                        "scripts": [
+                            "node_modules/admin-lte/plugins/sweetalert2/sweetalert2.all.min.js"
+                        ]
                     }
                 },
                 "lint": {
                     "builder": "@angular-eslint/builder:lint",
                     "options": {
-                        "lintFilePatterns": [
-                            "src/**/*.ts",
-                            "src/**/*.html"
-                        ]
+                        "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
                     }
                 },
                 "e2e": {
@@ -135,8 +130,6 @@
     },
     "cli": {
         "analytics": "43a7ce40-5fb9-4a0d-8b40-b48fc0426e9d",
-        "schematicCollections": [
-            "@angular-eslint/schematics"
-        ]
+        "schematicCollections": ["@angular-eslint/schematics"]
     }
 }
