--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "@fortawesome/fontawesome-free": "^6.4.0",
         "@ngrx/store": "14.3.0",
         "@profabric/angular-components": "0.1.2",
+        "@tweenjs/tween.js": "^21.0.0",
+        "angular2-multiselect-dropdown": "^5.0.4",
         "bootstrap": "4.6.1",
         "core-js": "3.25.0",
         "gatekeeper-client-sdk": "0.4.2",
